--- a/Sistema_Funcional_de_Bebidas/src/main/java/Visao/Tela_alterar_cliente.form
+++ b/Sistema_Funcional_de_Bebidas/src/main/java/Visao/Tela_alterar_cliente.form
@@ -175,7 +175,7 @@
                       <Component id="jButton4" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jButton2" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace max="32767" attributes="0"/>
+                  <EmptySpace pref="43" max="32767" attributes="0"/>
                   <Component id="jLabel11" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
