--- a/Sistema_Funcional_de_Bebidas/src/main/java/Visao/Tela_cadastrar_bebida.form
+++ b/Sistema_Funcional_de_Bebidas/src/main/java/Visao/Tela_cadastrar_bebida.form
@@ -173,7 +173,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Descricao"/>
+            <Property name="text" type="java.lang.String" value="Descri&#xe7;ao"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jTextField2">
