--- a/Sistema_Funcional_de_Bebidas/src/main/java/Visao/Tela_extrato.form
+++ b/Sistema_Funcional_de_Bebidas/src/main/java/Visao/Tela_extrato.form
@@ -398,12 +398,11 @@
         </Constraint>
       </Constraints>
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel24">
+    <Component class="javax.swing.JLabel" name="jLabel25">
       <Properties>
-        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="ff" green="ff" red="0" type="rgb"/>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="2" name="D:\Sistema_Funcional_de_Bebidas\Sistema_Funcional_de_Bebidas\Sistema_Funcional_de_Bebidas\src\main\java\Imagem\Fundo Extrato 900-600.png"/>
         </Property>
-        <Property name="opaque" type="boolean" value="true"/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
